--- a/client/src/App.css
+++ b/client/src/App.css
@@ -130,7 +130,7 @@ body {
 
 #edit-toolbar {
   background-color: transparent;
-  transform: translate(41%, 0%);
+  transform: translate(20.5%, 0%);
 }
 
 
@@ -207,14 +207,14 @@ body {
 #playlister-statusbar {
   position: absolute;
   left: 0%;
-  top: 90%;
+  top: 92%;
   width: 100%;
-  height: 10%;
-  background-color: rgb(0, 127, 255);
+  height: 8%;
+  background-color: rgb(211, 211, 211);
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 50pt;
+  font-size: 30pt;
 }
 
 #list-selector-heading {
@@ -450,7 +450,7 @@ input {
 .expanded {
   height: 400px;
   animation: expand 0.5s ease;
-  background-color: #669966;
+  background-color: #8000F00F;
   width: 575px;
 }
 
