--- a/client/src/App.css
+++ b/client/src/App.css
@@ -286,6 +286,28 @@ top: 10%;
   background-color: var(--swatch-complement);
 }
 
+.comment-card {
+  background-color: var(--swatch-accent);
+  color: white;
+  height:fit-content;
+  border-radius: 20px;
+  width: 100%;
+  text-align: center;
+  overflow: scroll;
+}
+
+.place-comment-card {
+  background-color: burlywood;
+  top: 10%;
+  height:78%;
+  overflow: scroll;
+}
+
+.comment {
+  top : 10%;
+  height: 100%;
+}
+
 .list-card-button {
   float: right;
   transform: scale(2);
